--- a/index.html
+++ b/index.html
@@ -2,137 +2,167 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-	<title></title>
-	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-	<link rel="stylesheet" href="main.css"/>
-	<link rel="stylesheet" href="reset.css"/>
-	<link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Black+Han+Sans|Nanum+Gothic&display=swap"/>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="reset.css">
+    <title>Document</title>
 </head>
 <body>
-<div id="skipNav">
-</div>
-	<header>
-		<h1><a href="#"><img src="images/logo.png" alt="Nadyung.io"/></a></h1>
-		<nav id="gnb">
-			<ul>
-				<li><a href="#a2">Skills</a></li>
-				<li><a href="#a3">Project 1</a></li>
-				<li><a href="#a4">Project 2</a></li>
-				<li><a href="#a5">Git</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<section class="Hello">
-			<div class="inner">
-				<div class="box">
-					<h2 data-aos="fade-up">Hello <span>!</span> <br/> I<span>'</span> m a Web Publisher <span>.</span></h2>
-					<p data-aos="fade-up">She tells him "Oh, love, no one's ever gonna hurt you, love<br/>
-						I'm gonna give you all of my love. Nobody matters like you"<br/>
-					<br/>
-						"You're gonna grow and have a good life"</p>
-					<p data-aos="fade-up">
-					슬퍼하는 이름과 우는 어머니, 까닭입니다. 그러나 계절이 강아지, 같이 무덤 패, 슬퍼하는 듯합니다. 
-					<br/>
-					가을 별 이름을 사랑과 계십니다. 별 나의 밤이 패, 이름과, 별을 마디씩 쓸쓸함과 있습니다.
-					</p>
-				</div>
-			</div><!--inner-->	
-		</section>
-		<section class="skill_content" id="a2">
-			<div class="inner">
-				<h2 class="headline" data-aos="fade-up">Design <span>&amp;</span> Coding Skills</h2>
-				<div class="skill_flexbox">
-					<div class="homebox" data-aos="fade-up"><!--illustration box-->
-							<h3>HTML<span>90%</span></h3>
-							<div class="whitebar"><!--하얀색 배경-->
-								<div>
-								</div>
-							</div>
-							<p>국가는 농수산물의 수급균형과 유통구조의 개선에 노력하여 가격안정을 도모함으로써 농·어민의 이익을 보호한다. 
-								정당은 그 목적·조직과 활동이 민주적이어야 하며, 국민의 정치적 의사형성에 참여하는데 필요한 조직을 가져야 한다.</p>
-					</div>
-					<div class="homebox" data-aos="fade-up"><!--css box-->
-							<h3>CSS3</h3>
-							<div class="whitebar">
-								<div>
-								</div>
-							</div>
-							<p>국가는 농수산물의 수급균형과 유통구조의 개선에 노력하여 가격안정을 도모함으로써 농·어민의 이익을 보호한다. 
-								정당은 그 목적·조직과 활동이 민주적이어야 하며, 국민의 정치적 의사형성에 참여하는데 필요한 조직을 가져야 한다.</p>
-					</div>
-					<div class="homebox" data-aos="fade-up"><!--git box-->
-							<h3>Git</h3>
-							<div class="whitebar">
-								<div>
-								</div>
-							</div>
-							<p>국가는 농수산물의 수급균형과 유통구조의 개선에 노력하여 가격안정을 도모함으로써 농·어민의 이익을 보호한다. 
-								정당은 그 목적·조직과 활동이 민주적이어야 하며, 국민의 정치적 의사형성에 참여하는데 필요한 조직을 가져야 한다.</p>
-					</div>
-					<div class="homebox" data-aos="fade-up"><!--javascript box-->
-							<h3>javascript</h3>
-							<div class="whitebar">
-								<div>
-								</div>
-							</div>
-							<p>국가는 농수산물의 수급균형과 유통구조의 개선에 노력하여 가격안정을 도모함으로써 농·어민의 이익을 보호한다. 
-								정당은 그 목적·조직과 활동이 민주적이어야 하며, 국민의 정치적 의사형성에 참여하는데 필요한 조직을 가져야 한다.</p>
-					</div>
-					<div class="homebox" data-aos="fade-up"v><!--photoshop box-->
-							<h3>Photoshop</h3>
-							<div class="whitebar">
-								<div>
-								</div>
-							</div>
-							<p>국가는 농수산물의 수급균형과 유통구조의 개선에 노력하여 가격안정을 도모함으로써 농·어민의 이익을 보호한다. 
-								정당은 그 목적·조직과 활동이 민주적이어야 하며, 국민의 정치적 의사형성에 참여하는데 필요한 조직을 가져야 한다.</p>
-					</div>
-					<div class="homebox" data-aos="fade-up"><!--illustration box-->
-							<h3>Illustration</h3>
-							<div class="whitebar">
-								<div>
-								</div>
-							</div>
-							<p>국가는 농수산물의 수급균형과 유통구조의 개선에 노력하여 가격안정을 도모함으로써 농·어민의 이익을 보호한다. 
-								정당은 그 목적·조직과 활동이 민주적이어야 하며, 국민의 정치적 의사형성에 참여하는데 필요한 조직을 가져야 한다.</p>
-					</div>
-				</div>
-			</div>
-		</section>
-			<section class="portpolio_content" id="a3">
-				<div class="portpolio p1">
-					<a href="#" class="btn">
-						<p>DA<br/>Technology</p>
-						<span class="arrow ar1"></span>
-					</a>
-				</div>
-				<div class="portpolio p2">
-					<a href="#" class="btn">
-						<p>League<br/>of Legends</p>
-						<span class="arrow ar2"></span>
-					</a>
-				</div>
-				<div class="portpolio p3">
-					<a href="#" class="btn">
-						<p>MNH<br/>Entertainment</p>
-						<span class="arrow ar3"></span>
-					</a>
-				</div>
-			</section>
-			<section class="portpolio2_content" id="a4">
-				<div class="portpolio2 c1"></div>
-				<div class="portpolio2 c2"></div>
-				<div class="portpolio2 c3"></div>
-				<div class="portpolio2 c4"></div>
-			</section>
-		</main>
-	<footer>
-	</footer>
-<script>
-  AOS.init();
-</script>
+    <header>
+       <h1 class="logo"><a href="#">2</a></h1>
+       <nav>
+           <ul>
+                <li><a href="#contents1">1</a></li>
+                <li><a href="#contents2">2</a></li>
+                <li><a href="#contactme">3</a></li>
+           </ul>
+       </nav>
+    </header>
+    <main>
+        <div class="here">
+            <div class="snow">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 1920" preserveAspectRatio="xMidYMax slice">
+                    <g fill="#FFF" fill-opacity=".8" transform="translate(100 42)">
+                    <g class="snow-bottom-layer">
+                        <ellipse cx="60" cy="5" rx="3" ry="3"/>
+                        <ellipse cx="138" cy="100" rx="3" ry="3"/>
+                        <ellipse cx="398" cy="400" rx="3" ry="3"/>
+                        <ellipse cx="719" cy="900" rx="3" ry="3"/>
+                        <ellipse cx="760" cy="700" rx="3" ry="3"/>
+                        <ellipse cx="635" cy="600" rx="3" ry="3"/>
+                        <ellipse cx="478" cy="500" rx="3" ry="3"/>
+                        <ellipse cx="193" cy="400" rx="3" ry="3"/>
+                        <ellipse cx="293" cy="300" rx="3" ry="3"/>
+                        <ellipse cx="393" cy="200" rx="3" ry="3"/>
+                        <ellipse cx="493" cy="1536" rx="3" ry="3"/>
+                        <ellipse cx="593" cy="1400" rx="3" ry="3"/>
+                        <ellipse cx="693" cy="1300" rx="3" ry="3"/>
+                        <ellipse cx="793" cy="1200" rx="3" ry="3"/>
+                        <ellipse cx="0" cy="1100" rx="3" ry="3"/>
+                        <ellipse cx="993" cy="1000" rx="3" ry="3"/>
+                        <ellipse cx="1013" cy="1500" rx="3" ry="3"/>
+                        <ellipse cx="60" cy="1400" rx="3" ry="3"/>
+                        <ellipse cx="247" cy="1300" rx="3" ry="3"/>
+                        <ellipse cx="154" cy="1200" rx="3" ry="3"/>
+                        <ellipse cx="731" cy="1100" rx="3" ry="3"/>
+                        <ellipse cx="599" cy="900" rx="3" ry="3"/>
+                        <ellipse cx="339" cy="800" rx="3" ry="3"/>
+                        <ellipse cx="239" cy="700" rx="3" ry="3"/>
+                        <ellipse cx="1203" cy="600" rx="3" ry="3"/>
+                        <ellipse cx="102" cy="500" rx="3" ry="3"/>
+                        <ellipse cx="270" cy="1000" rx="3" ry="3"/>
+                        <ellipse cx="826" cy="300" rx="3" ry="3"/>
+                        <ellipse cx="1180" cy="300" rx="3" ry="3"/>
+                        <ellipse cx="626" cy="200" rx="3" ry="3"/>
+                        <ellipse cx="887" cy="900" rx="3" ry="3"/>
+                        <ellipse cx="10" cy="10" rx="3" ry="3"/>
+                        <ellipse cx="138" cy="700" rx="3" ry="3"/>
+                        <ellipse cx="398" cy="600" rx="3" ry="3"/>
+                        <ellipse cx="1200" cy="500" rx="3" ry="3"/>
+                        <ellipse cx="760" cy="200" rx="3" ry="3"/>
+                        <ellipse cx="1010" cy="5" rx="3" ry="3"/>
+                        <ellipse cx="635" cy="400" rx="3" ry="3"/>
+                        <ellipse cx="478" cy="300" rx="3" ry="3"/>
+                        <ellipse cx="1100" cy="100" rx="3" ry="3"/>
+                        <ellipse cx="247" cy="1500" rx="3" ry="3"/>
+                        <ellipse cx="154" cy="1300" rx="3" ry="3"/>
+                        <ellipse cx="90" cy="1400" rx="3" ry="3"/>
+                        <ellipse cx="599" cy="1200" rx="3" ry="3"/>
+                        <ellipse cx="339" cy="1600" rx="3" ry="3"/>
+                        <ellipse cx="239" cy="890" rx="3" ry="3"/>
+                        <ellipse cx="413" cy="500" rx="3" ry="3"/>
+                        <ellipse cx="800" cy="700" rx="3" ry="3"/>
+                        <ellipse cx="395" cy="600" rx="3" ry="3"/>
+                        <ellipse cx="1000" cy="400" rx="3" ry="3"/>
+                        <ellipse cx="626" cy="300" rx="3" ry="3"/>
+                        <ellipse cx="160" cy="200" rx="3" ry="3"/>
+                        <ellipse cx="125" cy="900" rx="3" ry="3"/>
+                        <ellipse cx="54" cy="1000" rx="3" ry="3"/>
+                        <ellipse cx="1200" cy="100" rx="3" ry="3"/>
+                        <ellipse cx="0" cy="500" rx="3" ry="3"/>
+                        <ellipse cx="20" cy="400" rx="3" ry="3"/>
+                        <ellipse cx="1200" cy="30" rx="3" ry="3"/>
+                        <ellipse cx="120" cy="20" rx="3" ry="3"/>
+                        <ellipse cx="188" cy="50" rx="3" ry="3"/>
+                    </g>
+                    </g>
+                    <g fill="#FFF" fill-opacity=".4" transform="translate(100 63)">
+                    <g class="snow-top-layer">
+                        <circle cx="10" cy="776" r="4"/>
+                        <circle cx="120" cy="925" r="4"/>
+                        <circle cx="900" cy="844" r="4"/>
+                        <circle cx="200" cy="1115" r="4"/>
+                        <circle cx="80" cy="909" r="4"/>
+                        <circle cx="300" cy="1438" r="4" transform="rotate(180 874 1438)"/>
+                        <circle cx="30" cy="1256" r="4" transform="rotate(180 657 1256)"/>
+                        <circle cx="443" cy="1372" r="4" transform="rotate(180 443 1372)"/>
+                        <circle cx="339" cy="1107" r="4" transform="rotate(180 339 1107)"/>
+                        <circle cx="24" cy="1305" r="4" transform="rotate(180 24 1305)"/>
+                        <circle cx="340" cy="8" r="4"/>
+                        <circle cx="194" cy="157" r="4"/>
+                        <circle cx="548" cy="76" r="4"/>
+                        <circle cx="695" cy="207" r="4"/>
+                        <circle cx="248" cy="191" r="4"/>
+                        <circle cx="700" cy="841" r="4"/>
+                        <circle cx="598" cy="241" r="4"/>
+                        <circle cx="1200" cy="41" r="4"/>
+                        <circle cx="1000" cy="1041" r="4"/>
+                        <circle cx="1080" cy="641" r="4"/>
+                        <circle cx="1150" cy="241" r="4"/>
+                        <circle cx="350" cy="141" r="4"/>
+                        <circle cx="610" cy="641" r="4"/>
+                        <circle cx="918" cy="341" r="4"/>
+                        <circle cx="480" cy="670" r="4" transform="rotate(180 874 670)"/>
+                        <circle cx="770" cy="499" r="4" transform="rotate(180 657 488)"/>
+                        <circle cx="180" cy="604" r="4" transform="rotate(180 443 604)"/>
+                        <circle cx="240" cy="339" r="4" transform="rotate(180 339 339)"/>
+                        <circle cx="24" cy="537" r="4" transform="rotate(180 24 537)"/>
+                    </g>
+                    </g>
+                </svg>
+            </div>
+            <section id="contents"><?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 400 400" style="enable-background:new 0 0 400 400;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:url(#SVGID_1_);}
+                    .st1{fill:url(#SVGID_2_);}
+                </style>
+                <g>
+                    <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="0" y1="200" x2="400" y2="200">
+                        <stop  offset="0" style="stop-color:#F08A2F"/>
+                        <stop  offset="1" style="stop-color:#CD2668"/>
+                    </linearGradient>
+                    <circle class="st0" cx="200" cy="200" r="200"/>
+                </g>
+                <linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="268.2727" y1="12.4223" x2="131.4274" y2="388.4017">
+                    <stop  offset="0" style="stop-color:#662DAD"/>
+                    <stop  offset="0.1238" style="stop-color:#7A2C9F;stop-opacity:0.8762"/>
+                    <stop  offset="0.3779" style="stop-color:#9E2987;stop-opacity:0.6221"/>
+                    <stop  offset="0.6163" style="stop-color:#B82776;stop-opacity:0.3837"/>
+                    <stop  offset="0.8306" style="stop-color:#C8266C;stop-opacity:0.1694"/>
+                    <stop  offset="1" style="stop-color:#CD2668;stop-opacity:0"/>
+                </linearGradient>
+                <circle class="st1" cx="200" cy="200" r="200"/>
+                </svg>
+                
+                <h2><span>HELLO<br/>
+                    NaDyungkr</span></h2>
+            </section>
+            <section id="contents1">
+                <h2>
+                    너무 힘들잖앙
+                </h2>
+            </section>
+            <section id="contents2">
+
+            </section>
+        </div><!--here-->
+    </main>
+    <footer id="contactme">
+
+    </footer>
 </body>
 </html>
