depth 콘텐츠 방향 수정 2, 3

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <header>
        <h1 class="logo"><a href="#top">2</a></h1>
        <nav class="menu">
-            
+           <ul>
+                <li>Hello</li>
+                <li>Design</li>
+                <li>Project</li>
+                <li>Contact me</li>
+           </ul>
        </nav>
       <!-- filters -->
       <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
@@ -200,13 +205,21 @@
                 <h2><span>HELLO<br/>
                     NaDyungkr</span></h2>
             </section>
-            <section id="contents1">
-                <h2>
-                    너무 힘들잖앙
-                </h2>
+            <section id="Design">
+                <h2>Design</h2>
+                <ol>
+                    <li>Emoticon</li>
+                    <li>시안디자인</li>
+                    <li>SD캐릭터</li>
+                    <li>UI/UX</li>
+                </ol>
             </section>
-            <section id="contents2">
-
+            <section id="Project">
+                <ol>
+                    <li>클론코딩</li>
+                    <li>직접제작</li>
+                    <li>앱디자인</li>
+                </ol>
             </section>
         </div><!--here-->
     </main>
