햄버거 메뉴 추가

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 <body>
     <header>
        <h1 class="logo"><a href="#top">2</a></h1>
+       <div class="ham">
+           <a href="#">
+                <div class="ham_top"></div>
+                <div class="ham_middle"></div>
+                <div class="ham_bottom"></div>
+           </a>
+       </div>
        <nav class="menu">
            <ul>
                 <li>Hello</li>
