--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
     <header>
-       <h1 class="logo"><a href="#top">2</a></h1>
+       <h1 class="logo"><a href="#top">로고</a></h1>
        <div class="ham">
            <a href="#">
-                <div class="ham_top"></div>
-                <div class="ham_middle"></div>
-                <div class="ham_bottom"></div>
+                <span class="ham_top"></span>
+                <span class="ham_middle"></span>
+                <span class="ham_bottom"></>
            </a>
        </div>
-       <nav class="menu">
+       <div class="bg"></div>
+       <nav>
            <ul>
                 <li>Hello</li>
                 <li>Design</li>
@@ -26,25 +27,6 @@
                 <li>Contact me</li>
            </ul>
        </nav>
-      <!-- filters -->
-      <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-          <defs>
-            <filter id="shadowed-goo">
-                <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-                <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                <feGaussianBlur in="goo" stdDeviation="3" result="shadow" />
-                <feColorMatrix in="shadow" mode="matrix" values="0 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 -0.2" result="shadow" />
-                <feOffset in="shadow" dx="1" dy="1" result="shadow" />
-                <feBlend in2="shadow" in="goo" result="goo" />
-                <feBlend in2="goo" in="SourceGraphic" result="mix" />
-            </filter>
-            <filter id="goo">
-                <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-                <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                <feBlend in2="goo" in="SourceGraphic" result="mix" />
-            </filter>
-          </defs>
-      </svg>
     </header>
     <main>
         <div class="here">
